small alignement fix

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -375,7 +375,7 @@
         }
 
         .clients{
-            font-size: 50%;
+
             padding: 8em 0;
         
         }
@@ -387,7 +387,7 @@
             padding: 5em 2em;
         }
         .review{
-            width: 80%;
+            width: 70%;
 
         }
     }
